add_executable(full full_use.cpp)
add_executable(ntobject use_ntobject.cpp)
add_executable(use_ntobject_in_namespace use_ntobject_in_namespace.cpp)
add_executable(use_ntobject_in_class use_ntobject_in_class.cpp)
add_executable(use_ntarray use_ntarray.cpp)
add_executable(ntarray_benchmark ntarray_benchmark.cpp)

target_link_libraries(ntobject mysqlcppconn ff_net)
target_link_libraries(full mysqlcppconn)
